styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');

:root {
    --font-heading: crimson;
    --para-font: #777777;
    --black: #222222;
    --bg: rgba(237, 28, 70);
    --white: #fff;
}

* {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    outline: none;
    border: none;
    text-decoration: none;
    /* text-transform: capitalize; */
    transition: 0.2s linear;
}

html {
    font-size: 62.5%;
    overflow-x: hidden;
    scroll-behavior: smooth;
    /* scroll-padding-top: 9rem; */
}

section {
    min-height: 90vh;
    padding: 10rem 9% 2rem;
}

span {
    color: var(--font-heading);
}

.heading {
    text-align: center;
    font-size: 4.5rem;
}

/* Header Section */

.header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 2rem 10%;
    background: var(--white);
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 100;
}

.logo {
    width: 200px; 
    height: auto;
}

.navbar a {
    color: black;
    font-size: 1.5rem;
    margin-left: 4rem;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
    position: relative;
    transition: .3s;
}

.navbar a:after {
    content: '';
    width: 0%;
    height: 2px;
    background: var(--font-heading);
    position: absolute;
    left: 0;
    bottom: -12px;
    transition: 0.4s;
}

.navbar a:hover,
.navbar a.active {
    color: var(--font-heading);
}

.navbar a:hover::after,
.navbar a.active::after {
    width: 100%;
}

#menu-icon {
    font-size: 3.6rem;
    color: var(--black);
    display: none;
}

/* Home Section */

.home {
    display: flex;
    justify-content: center;
    align-items: center;
}

.home::before {
    content: "";
    background-image: url(assets/wallpaper.jpg);
    background-size: cover;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: 0.5;
    z-index: -1;
}

.home-content h1 {
    font-size: 5.6rem;
    font-weight: 700;
    line-height: 1.2;
    margin-top: 2rem;
    color: var(--font-heading);
    text-shadow: 0.5rem 0.5rem 0.5rem var(--black);
}

.home-content h2 {
    font-size: 3.2rem;
    font-weight: 700;
    margin-top: 2rem;
    color: var(--bg);
}

.home-content h3 {
    font-size: 2.4rem;
    font-weight: 600;
    padding: 2rem 0;
}

.home-content p {
    font-size: 1.6rem;
    font-weight: 600;
}

.home-img img {
    width: 20vw;
    border-radius: 50%;
}

.btn {
    display: inline-block;
    padding: 1.3rem 5rem;
    margin: 3rem 0;
    color: var(--white);
    font-size: 2rem;
    font-weight: 600;
    text-align: center;
    border: 0.3rem solid var(--font-heading);
    border-radius: 4rem;
    background: var(--white);
    color: var(--black);
    transition: 0.5s ease;
}

.btn:hover {
    background: var(--font-heading);
    color: var(--white);
    box-shadow: 0 0 1rem var(--font-heading);
}


/* Product Section */

.product {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;
}

.product-container {
    margin-right: 5rem;
    align-items: center;
}

.product-img img {
    width: 15vw;
}

.product-content h2 {
    margin-bottom: 5rem;
    text-align: left;
    line-height: 1.2;
}

.product-content h3{
    font-size: 2.6rem;
}

.product-content p,
.product-content li{
    font-size: 1.6rem;
    margin: 2rem 0;
}



/* About Section */




/* Team Section */

.team {
    padding: 10rem 6% 2rem;
}

.heading-description {
    text-align: center;
    padding: 1.3rem 1rem;
    font-size: 2rem;
    font-weight: 600;
}

.team-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
    gap: 0.5rem;
    padding: 2rem 0;
}

.team-container .team-box {
    flex: 1 1 30rem;
    padding: 3rem 2rem 4rem;
    border-radius: 2rem;
    text-align: center;
    border: .2rem solid var(--font-heading);
    transition: .5s ease;
}

.team-container .team-box:hover {
    border-color: var(--font-heading);
    transform: scale(1.02);
}

.team-box:hover {
    box-shadow: 0 0 2rem var(--font-heading);
}

.team-img img {
    width: 100%;
    overflow: hidden;
    border-radius: 1rem;
}

.team-box h3 {
    font-size: 2rem;
    color: var(--black);
    padding: 1rem 0;
}

.team-box h4 {
    font-size: 1.5rem;
    color: var(--black);
    padding: 0.5rem 0;
}

.team-box p {
    font-size: 1.2rem;
    padding: 0.5rem 0;
}

.team-social a {
    display: inline-block;
    margin: 0.7rem;
    width: 4rem;
    height: 4rem;
    background: var(--font-heading);
    color: var(--white);
    line-height: 4rem;
    font-size: 1.5rem;
}

.team-social a:hover {
    border-radius: 50%;
}


/* Contact Section */

.contact h2 {
    margin-bottom: 3rem;
}

.contact form {
    max-width: 70rem;
    margin: 1rem auto;
    text-align: center;
    margin-bottom: 3rem;
}

.contact form .input-box {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.contact form .input-box input,
.contact form textarea {
    width: 100%;
    padding: 1.5rem;
    font-size: 1.6rem;
    color: var(--white);
    background: var(--font-heading);
    border-radius: .8rem;
    margin: .7rem 0;
}

::placeholder {
    color: var(--white);
}

.contact form .input-box input {
    width: 49%;
}

.contact form textarea {
    resize: none;
}

.contact form .btn {
    margin-top: 2rem;
    cursor: pointer;
}


.contact .contact_description h3 span{
    font-size: 2.5rem;
    color: var(--font-heading);
}
.contact .contact_description p{
    font-size: 2.5rem;
    margin-top: 40px;
    text-align: justify;


}

.contact .contact_form { 
    grid-area: 1 / 2 / 2 / 3;
    max-width: 600px;
    margin: 50px auto;
    background-color: #fff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}
.contact .contact_form h2 {
    margin-top: 10px;
    font-size: 3rem;
    color:var(--font-heading);
}
.contact .contact_form label{
    margin-top: 10px;
    font-size: 1.9rem;
}
.contact .contact_form input[type="text"],
input[type="email"],
textarea {
    width: 100%;
    padding: 10px;
    margin-top: 8px;
    margin-bottom: 20px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}
.contact .contact_form textarea {
    height: 120px;
}
.contact .contact_form input[type="submit"] {
    background-color: var(--font-heading);
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 16px;
}


.footer {
    padding: 30px 0;
    background-color: var(--font-heading);
}

.footer-social h3 {
    text-align: center;
    font-size: 2rem;
    margin-bottom: 10px;
}

.footer .footer-social {
    text-align: center;
    padding-bottom: 20px;
}

.footer .footer-social a {
    font-size: 2.4rem;
    border: 0.2rem solid var(--white);
    width: 4rem;
    height: 4rem;
    line-height: 4rem;
    color: var(--white);
    background: var(--black);
    display: inline-block;
    text-align: center;
    border-radius: 50%;
    margin: 0 1rem;
    transition: 0.5s ease;
}

.footer .footer-social a:hover {
    background: var(--white);
    color: var(--font-heading);
}

.footer p {
    margin-top: 10px;
    text-align: center;
    font-size: 1.6rem;
    font-weight: 500;
}


@media (max-width: 900px) {
    #menu-icon {
        display: block;
    }

    #menu-icon:hover {
        color: var(--font-heading);
        transition: .5s ease;
    }


    .navbar {
        position: absolute;
        top: 100%;
        left: 0;
        width: 100%;
        padding: 1rem 3%;
        background: var(--white);
        border-top: .1rem solid rgba(0, 0, 0, .2);
        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
        display: none;
    }

    .navbar.active {
        display: block;
    }

    .navbar a {
        display: block;
        font-size: 1.7rem;
        margin: 2.7rem 0;
    }

    .navbar a:hover::after,
    .navbar a.active::after {
        width: 12%;
    }

    .home {
        flex-direction: column;
    }

    .home-content h1 {
        font-size: 5rem;
    }

    .home-content h2 {
        font-size: 3rem;
    }

    .home-content h3 {
        font-size: 2.6rem;
    }

    .home-content {
        order: 2;
    }

    .home-img img {
        width: 30vw;
        margin-top: 2rem;
    }

    .product {
        flex-direction: column;
    }

    .product-img img {
        width: 50vw;
        margin-top: 4rem;
    }

}

